fix(ui): correctly align dexNumber on mobile

--- a/ui/src/app/features/pokemon/components/pokemon/pokemon.component.scss
+++ b/ui/src/app/features/pokemon/components/pokemon/pokemon.component.scss
@@ -84,8 +84,6 @@ $padding: 0.2em;
 .dex-number
 {
   color: var(--primary);
-  margin-right: 0.5vh;
-
   position: absolute;
   top: 0;
   left: 0;
